# VEDA_miniProject2_Blog

./: .gitignore  CMakeLists.txt  README.md  homewidget.cpp  homewidget.h  homewidget.ui  mainwidget.cpp  mainwidget.h  mainwidget.ui  writewidget.cpp  writewidget.h  writewidget.ui
include/: accountdialog.h  commentdisplaywidget.h  commentwidget.h  homewidget.h  mainwidget.h  network.h  post.h  postlistwidget.h  postwidget.h  writewidget.h
source/: accountdialog.cpp  commentdisplaywidget.cpp  commentwidget.cpp  homewidget.cpp  mainwidget.cpp  network.cpp  postlistwidget.cpp  postwidget.cpp  writewidget.cpp
ui/: accountdialog.ui  commentdisplaywidget.ui  commentwidget.ui  homewidget.ui  mainwidget.ui  postlistwidget.ui  postwidget.ui  searchwidget.ui  writewidget.ui
